--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -62,7 +62,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "buildTarget": "frontend:build:development"
+            "buildTarget": "frontend:build:development",
+            "proxyConfig": "proxy.conf.json"
           },
           "configurations": {
             "production": {
