--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -12,4 +12,7 @@ alembic>=1.12.0
 pymssql==2.2.8
 pytest==7.4.3
 httpx==0.25.2
-ldap3>=2.9.1 
+ldap3>=2.9.1
+slowapi>=0.1.9
+redis>=5.0.1
+cryptography>=41.0.7 
