Finalizar ajustes del módulo de empresas y configuración de múltiples bases de datos

--- a/backend/env.production.example
+++ b/backend/env.production.example
@@ -1,87 +1,79 @@
 # =============================================================================
-# CONFIGURACIÓN DE BASES DE DATOS - MÚLTIPLES ENTORNOS
+# CONFIGURACIÓN DE PRODUCCIÓN - OneSite
 # =============================================================================
-
-# =============================================================================
-# BASE DE DATOS PRINCIPAL (OneSite)
-# =============================================================================
-# Para desarrollo local
-DB_SERVER=localhost
-DB_NAME=onesite_db
-DB_USER=sa
-DB_PASSWORD=tu_contraseña_local
-
-# Para producción (OneSite)
-# DB_SERVER=tu_servidor_produccion
-# DB_NAME=onesite_prod
-# DB_USER=onesite_user
-# DB_PASSWORD=tu_contraseña_produccion
-
-# =============================================================================
-# BASE DE DATOS SATURNO13 (TheEliteGroup)
-# =============================================================================
-# Para conectar a la tabla de empresas existente
-SATURNO13_SERVER=SATURNO13
-SATURNO13_DB=AnalysisDW
-SATURNO13_USER=tu_usuario_saturno13
-SATURNO13_PASSWORD=tu_contraseña_saturno13
-SATURNO13_SCHEMA=TheEliteGroup_Parameters
-
-# =============================================================================
-# BASE DE DATOS ADICIONAL (si necesitas otra)
-# =============================================================================
-# DB2_SERVER=otro_servidor
-# DB2_NAME=otra_base_datos
-# DB2_USER=otro_usuario
-# DB2_PASSWORD=otra_contraseña
 
 # =============================================================================
 # CONFIGURACIÓN DE ENTORNO
 # =============================================================================
-# Determina qué base de datos usar
-ENVIRONMENT=development  # development, staging, production
-USE_SATURNO13_COMPANIES=true  # true para usar tabla de empresas de SATURNO13
+ENVIRONMENT=production
+USE_SATURNO13_COMPANIES=true
 
 # =============================================================================
-# CONFIGURACIÓN DE SEGURIDAD JWT
+# BASE DE DATOS PRINCIPAL (OneSite) - PRODUCCIÓN
 # =============================================================================
-SECRET_KEY=tu-super-secret-key-aqui-muy-larga-y-compleja-al-menos-32-caracteres
+DB_SERVER=prod-saturno13
+DB_NAME=OnesiteDW_Prod
+DB_USER=prod_onesite_user
+DB_PASSWORD=prod_password_muy_segura_y_compleja
+
+# =============================================================================
+# BASE DE DATOS SATURNO13 (TheEliteGroup) - PRODUCCIÓN
+# =============================================================================
+SATURNO13_SERVER=prod-saturno13
+SATURNO13_DB=AnalysisDW_Prod
+SATURNO13_USER=prod_analysis_user
+SATURNO13_PASSWORD=prod_analysis_password_segura
+SATURNO13_SCHEMA=TheEliteGroup_Parameters
+
+# =============================================================================
+# BASE DE DATOS JUPITER12MIA (EFLOWER_Reports) - PRODUCCIÓN
+# =============================================================================
+JUPITER12MIA_SERVER=prod-jupiter12mia
+JUPITER12MIA_DB=EFLOWER_Reports_Prod
+JUPITER12MIA_USER=prod_eflower_user
+JUPITER12MIA_PASSWORD=prod_eflower_password_segura
+
+# =============================================================================
+# CONFIGURACIÓN DE SEGURIDAD JWT - PRODUCCIÓN
+# =============================================================================
+SECRET_KEY=prod-super-secret-key-2024-elite-group-production-very-long-and-secure
 ALGORITHM=HS256
-ACCESS_TOKEN_EXPIRE_MINUTES=60
+ACCESS_TOKEN_EXPIRE_MINUTES=30
 
 # =============================================================================
-# CONFIGURACIÓN DE ACTIVE DIRECTORY
+# CONFIGURACIÓN DE ACTIVE DIRECTORY - PRODUCCIÓN
 # =============================================================================
-AD_SERVER=10.50.5.200
+AD_SERVER=prod-ad-server
 AD_PORT=636
 AD_USE_SSL=true
 AD_BASE_DN=DC=ELITE,DC=local
 AD_DOMAIN=elite.local
 
 # =============================================================================
-# CONFIGURACIÓN DE SEGURIDAD
+# CONFIGURACIÓN DE SEGURIDAD - PRODUCCIÓN
 # =============================================================================
-RATE_LIMIT_PER_MINUTE=5
-MAX_LOGIN_ATTEMPTS=5
-ACCOUNT_LOCKOUT_MINUTES=15
+RATE_LIMIT_PER_MINUTE=10
+MAX_LOGIN_ATTEMPTS=3
+ACCOUNT_LOCKOUT_MINUTES=30
 
 # =============================================================================
-# CONFIGURACIÓN CORS
+# CONFIGURACIÓN CORS - PRODUCCIÓN
 # =============================================================================
-CORS_ORIGINS=["https://teg.1sitesoft.com", "http://localhost:4200"]
+CORS_ORIGINS=["https://teg.1sitesoft.com", "https://onesite.elitegroup.com"]
 CORS_CREDENTIALS=true
 CORS_METHODS=["GET", "POST", "PUT", "DELETE"]
 CORS_HEADERS=["Authorization", "Content-Type", "X-Requested-With"]
 
 # =============================================================================
-# CONFIGURACIÓN DE REDIS
+# CONFIGURACIÓN DE REDIS - PRODUCCIÓN
 # =============================================================================
-REDIS_HOST=localhost
+REDIS_HOST=prod-redis-server
 REDIS_PORT=6379
 REDIS_DB=0
+REDIS_PASSWORD=prod_redis_password
 
 # =============================================================================
-# CONFIGURACIÓN DE LOGGING
+# CONFIGURACIÓN DE LOGGING - PRODUCCIÓN
 # =============================================================================
-LOG_LEVEL=INFO
-LOG_FILE=onesite.log 
+LOG_LEVEL=WARNING
+LOG_FILE=/var/log/onesite/onesite.log 
